<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <GVL Name="GVL" Id="{bebee469-33ab-4dc5-83a7-e8c6445d8067}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	
simulacion : BOOL :=0;
parada : BOOL:=1;

// Geometría del robot//
//todo en mm//

Pi : REAL := 3.1416;

d : REAL := 400;
l1 : REAL := 1000; //longitud brazo proximal
l2 : REAL := 1400; //longitud brazo distal

//Vértices robot

Xa : REAL:= 0; 
Ya : REAL:= 0; 
Xb : REAL:= 0; 
Yb : REAL:= 0; 
Xc : REAL:= 0; //posición x del spray
Xc_sp : REAL:= 0; //setpoint posición x del spray
Yc : REAL:= 0; //posición y del spray
Yc_sp : REAL:= 0; //setpoint posición y del spray
Xd : REAL:= 0; 
Yd : REAL:= 0; 
Xe : REAL:= 0; 
Ye : REAL:= 0; 

//Mitad de cada brazo

Xab : REAL:= 0; 
Yab : REAL:= 0; 
Xbc : REAL:= 0; 
Ybc : REAL:= 0; 
Xcd : REAL:= 0; 
Ycd : REAL:= 0; 
Xde : REAL:= 0; 
Yde : REAL:= 0;


//Ángulos

alfa : REAL:= 0; //ángulo del brazo proximal izquierdo
alfa_sp : REAL:= 0; //setpoint ángulo del brazo proximal izquierdo
beta : REAL:= 0; //ángulo del brazo proximal derecho
beta_sp: REAL:= 0; //setpoint ángulo del brazo proximal derecho

deadband_angulo : REAL:= 0.05; //banda de no actuación en torno a target [rad]

alfa1 : REAL:= 0; 
beta1 : REAL:= 0; 
alfa2 : REAL:= 0; 
beta2 : REAL:= 0; 


d1: REAL;
error AT %Q*: BOOL;
d2: REAL;


alfa_enc : REAL :=0;
beta_enc : REAL :=0;

//Internas
en_objetivo_alfa : BOOL; //brazo proximal izquierdo en posición objetivo
en_objetivo_beta : BOOL; ///brazo proximal derecho en posición objetivo

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>