<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <POU Name="MAIN" Id="{d89af4a1-5c9c-4631-9fc2-66e77163c97b}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MAIN
VAR
	
fb_solveAlfaBeta:FB_SOLVEALFABETA;
fb_solveABDE:FB_SOLVEABDE;


END_VAR



]]></Declaration>
    <Implementation>
      <ST><![CDATA[//Blink
GVL.blink := NOT(GVL.blink);

//SolveAlfaBeta
fb_solveAlfaBeta.x:=GVL.Xc;
fb_solveAlfaBeta.y:=GVL.Yc;
fb_solveAlfaBeta();
GVL.d1 :=fb_solveAlfaBeta.d1;
GVL.d2 :=fb_solveAlfaBeta.d2;
GVL.error := fb_solveAlfaBeta.error;
GVL.alfa1:=180/GVL.Pi*fb_solveAlfaBeta.alfa1;
GVL.beta1:=180/GVL.Pi*fb_solveAlfaBeta.beta1;
GVL.alfa2:=180/GVL.Pi*fb_solveAlfaBeta.alfa2;
GVL.beta2:=180/GVL.Pi*fb_solveAlfaBeta.beta2;
GVL.alfa:=180/GVL.Pi*fb_solveAlfaBeta.alfa;
GVL.beta:=180/GVL.Pi*fb_solveAlfaBeta.beta;

//SolveABDE
fb_solveABDE.alfa:=GVL.alfa*GVL.Pi/180;
fb_solveABDE.beta:=GVL.beta*GVL.Pi/180;
fb_solveABDE();
GVL.Xa:=fb_solveABDE.Xa;
GVL.Ya:=fb_solveABDE.Ya;
GVL.Xb:=fb_solveABDE.Xb;
GVL.Yb:=fb_solveABDE.Yb;
GVL.Xd:=fb_solveABDE.Xd;
GVL.Yd:=fb_solveABDE.Yd;
GVL.Xe:=fb_solveABDE.Xe;
GVL.Ye:=fb_solveABDE.Ye;]]></ST>
    </Implementation>
    <LineIds Name="MAIN">
      <LineId Id="82" Count="14" />
      <LineId Id="28" Count="0" />
      <LineId Id="98" Count="0" />
      <LineId Id="97" Count="0" />
      <LineId Id="99" Count="10" />
    </LineIds>
  </POU>
</TcPlcObject>