<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <POU Name="InterpretarComando" Id="{c6ae15c2-f634-45d8-9d77-e1f929492264}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK InterpretarComando
VAR_INPUT
END_VAR
VAR_OUTPUT
END_VAR
VAR
	aux_str:STRING;
	aux_int:INT;
	aux_real:REAL;
	buscarX:G_buscar_numero;
	buscarY:G_buscar_numero;
	buscarF:G_buscar_numero;
	buscarS:G_buscar_numero;
	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF ((GVL.Scarafitti.ADSCOM_ready AND IO.string_in<>GVL.ultimo_comando)OR IO.string_in='reset') THEN
///excepcion para reset
IF IO.string_in='reset' THEN
	IO.string_in:='G00 X000 Y000';
END_IF
	IF  FIND (IO.string_in,'G') > 0 THEN
		IF FIND(IO.string_in, 'G00') > 0 THEN
			IO.string_out:='comando G00 recibido';
			//buscar comandos de X
			IF FIND (IO.string_in,'X') > 0 THEN
			buscarX.cadena:=IO.string_in;
			buscarX.letra:='X';
			buscarX();
			GVL.Xc_sp:= buscarX.numero;
			GVL.comando_actual:=IO.string_in;
			GVL.comando_actual_tipo:='G00';
			GVL.Scarafitti.ADSCOM_ready:=FALSE;
			END_IF
			//buscar comandos de Y
			IF FIND (IO.string_in,'Y') > 0 THEN
			buscarY.cadena:=IO.string_in;
			buscarY.letra:='Y';
			buscarY();
			GVL.Yc_sp:= buscarY.numero;
			GVL.comando_actual:=IO.string_in;
			GVL.comando_actual_tipo:='G00';
			GVL.Scarafitti.ADSCOM_ready:=FALSE;
			END_IF
			
		ELSE IF FIND(IO.string_in, 'G01') > 0 THEN
			IO.string_out:='comando G01 recibido';
			//buscar comandos de X
			IF FIND (IO.string_in,'X') > 0 THEN
			buscarX.cadena:=IO.string_in;
			buscarX.letra:='X';
			buscarX();
			GVL.Xc_sp:= buscarX.numero;
			GVL.comando_actual:=IO.string_in;
			GVL.comando_actual_tipo:='G01';
			GVL.Scarafitti.ADSCOM_ready:=FALSE;
			END_IF
			//buscar comandos de Y
			IF FIND (IO.string_in,'Y') > 0 THEN
			buscarY.cadena:=IO.string_in;
			buscarY.letra:='Y';
			buscarY();
			GVL.Yc_sp:= buscarY.numero;
			GVL.comando_actual:=IO.string_in;
			GVL.comando_actual_tipo:='G01';
			GVL.Scarafitti.ADSCOM_ready:=FALSE;
			END_IF
			END_IF
			END_IF
END_IF
	///buscar comandos F de velocidad
	IF (FIND(IO.string_in,'F')>0) THEN
			buscarF.cadena:=IO.string_in;
			buscarF.letra:='F';
			buscarF();
			GVL.regimen_maximo:= buscarF.numero;
		END_IF

//comando desconocido
IF ((FIND(IO.string_in,'F')=0) AND (FIND(IO.string_in,'G')=0)) THEN
	 IO.string_out:='Comando desconocido';
		GVL.comando_actual:='Comando desconocido';
		GVL.Scarafitti.ADSCOM_ready:=TRUE;
	END_IF


END_IF

//actualizar último comando
GVL.ultimo_comando:=IO.string_in;]]></ST>
    </Implementation>
    <LineIds Name="InterpretarComando">
      <LineId Id="10" Count="0" />
      <LineId Id="128" Count="0" />
      <LineId Id="125" Count="1" />
      <LineId Id="11" Count="3" />
      <LineId Id="46" Count="0" />
      <LineId Id="41" Count="0" />
      <LineId Id="43" Count="0" />
      <LineId Id="164" Count="1" />
      <LineId Id="42" Count="0" />
      <LineId Id="15" Count="0" />
      <LineId Id="69" Count="0" />
      <LineId Id="44" Count="0" />
      <LineId Id="35" Count="0" />
      <LineId Id="48" Count="1" />
      <LineId Id="169" Count="1" />
      <LineId Id="51" Count="2" />
      <LineId Id="70" Count="0" />
      <LineId Id="54" Count="0" />
      <LineId Id="47" Count="0" />
      <LineId Id="16" Count="0" />
      <LineId Id="18" Count="1" />
      <LineId Id="92" Count="1" />
      <LineId Id="171" Count="3" />
      <LineId Id="98" Count="5" />
      <LineId Id="175" Count="2" />
      <LineId Id="107" Count="3" />
      <LineId Id="89" Count="0" />
      <LineId Id="134" Count="0" />
      <LineId Id="151" Count="0" />
      <LineId Id="150" Count="0" />
      <LineId Id="149" Count="0" />
      <LineId Id="91" Count="0" />
      <LineId Id="178" Count="2" />
      <LineId Id="132" Count="0" />
      <LineId Id="129" Count="0" />
      <LineId Id="135" Count="0" />
      <LineId Id="130" Count="0" />
      <LineId Id="136" Count="0" />
      <LineId Id="21" Count="0" />
      <LineId Id="24" Count="0" />
      <LineId Id="58" Count="0" />
      <LineId Id="25" Count="0" />
      <LineId Id="88" Count="0" />
      <LineId Id="22" Count="0" />
      <LineId Id="137" Count="0" />
      <LineId Id="75" Count="2" />
    </LineIds>
  </POU>
</TcPlcObject>